--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
        ga('send', 'pageview');
     </script>
 
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
@@ -55,6 +56,7 @@
     <script src='https://cdn.firebase.com/v0/firebase.js'></script>
     <script src="bower_components/angular-fire/angularfire.min.js"></script>
     <script src='https://cdn.firebase.com/v0/firebase-simple-login.js'></script>
+    <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
