--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
     <script src='https://cdn.firebase.com/v0/firebase.js'></script>
     <script src="bower_components/angular-fire/angularfire.min.js"></script>
     <script src='https://cdn.firebase.com/v0/firebase-simple-login.js'></script>
-    <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
+    <!--<script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>-->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
