CRUD de atrações completo e estilizado com bootstrap.

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/bootstrap.css">
+        <link rel="stylesheet" href="styles/style.css">        
         <!-- endbuild -->
 </head>
   <body>
@@ -31,12 +32,12 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
+    <div class="">
       <!-- Include Header -->
       <div id="header" data-ng-include data-src="'views/shared/header.html'"></div>
 
       <!-- Add your site or application content here -->
-      <div class="container" ng-view=""></div>
+      <div class="" ng-view=""></div>
 
       <!-- Include Footer -->
       <!-- <div id="footer" data-ng-include data-src="'views/shared/footer.html'"></div> -->
