--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
        ga('send', 'pageview');
     </script>
 
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en&libraries=places"></script>
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
