--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang="pt-br"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" id="ng-app" ng-app="vacationsApp" lang="pt-br"> <!--<![endif]-->
     <head>
-        <base href="/">
+        <!-- <base href="/"> -->
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,8 +22,10 @@
         <!-- endbuild -->
 
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/bootstrap.css">
-        <link rel="stylesheet" href="styles/style.css">        
+        <!-- <link rel="stylesheet" href="styles/bootstrap.css"> -->
+        <!-- <link rel="stylesheet" href="styles/style.css">         -->
+        
+        <link rel="stylesheet" href="styles/main.css">        
         <!-- endbuild -->
     </head>
     <body>
