--- a/app/index.html
+++ b/app/index.html
@@ -22,20 +22,16 @@
         <!-- endbuild -->
 
         <!-- build:css(.tmp) styles/main.css -->
-        <!-- <link rel="stylesheet" href="styles/bootstrap.css"> -->
-        <!-- <link rel="stylesheet" href="styles/style.css">         -->
-        
         <link rel="stylesheet" href="styles/main.css">        
+        <!-- endbuild -->
+
+        <!-- build:js scripts/vendor/modernizr.js -->
+        <script src="bower_components/modernizr/modernizr.js"></script>
         <!-- endbuild -->
     </head>
     <body>
     <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    <!--[if lt IE 9]>
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
     <!-- Add your site or application content here -->
@@ -80,7 +76,6 @@
     <!-- endbower -->
     <!--<script src='https://cdn.firebase.com/v0/firebase-simple-login.js'></script>-->
     <!-- endbuild -->
-
 
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
