--- a/app/index.html
+++ b/app/index.html
@@ -73,10 +73,10 @@
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
     <script src="bower_components/angularfire/angularfire.js"></script>
+    <script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>
     <!-- endbower -->
     <!--<script src='https://cdn.firebase.com/v0/firebase-simple-login.js'></script>-->
     <!-- endbuild -->
-
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
