--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
     <script src="bower_components/angularfire/angularfire.js"></script>
+    <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <!-- endbower -->
     <script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>
     <!-- endbuild -->
