Várias melhorias no código e $watch implementado para algumas tarefas.

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
     <![endif]-->
 
     <!-- build:js scripts/vendor.js -->
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en&libraries=places"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=pt_br&libraries=places"></script>
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
